# src/api/docs/swagger.yaml
@@ -819,6 +819,18 @@ components:
           description: "The availability of the user"
           default: true
           example: true
+        skill:
+          type: string
+          description: "The candidate's skills separated via ,"
+          example: "Java,Angular,SQL Server,JavaScript"
+          default: ""
+        salaryExpectation:
+          type: integer
+          description: "The candidate expected salary"
+          default: 0
+        hasProfile:
+          type: boolean
+          description: "Whether has profile for the user"
     ProfileUpdate:
       required:
         - city
