# src/api/services/ProfileService.js
@@ -32,6 +32,8 @@ async function getMyProfile(currentUser) {
     city: _.get(member, "addresses[0].city", null),
     country: _.get(member, "competitionCountryCode", null),
     hasProfile: _.get(recruitProfile, "hasProfile", false),
+    salaryExpectation: _.get(recruitProfile, "salaryExpectation", 0),
+    skill: _.get(recruitProfile, "skill", ""),
     phone: _.get(recruitProfile, "phone", null),
     resume: _.get(recruitProfile, "resume", null),
     availability: _.get(recruitProfile, "availability", true),
